Added master metadata ability